[gd_scene load_steps=18 format=3 uid="uid://dqltp33metmcw"]

[ext_resource type="Script" uid="uid://cwxd8rt2uij61" path="res://scripts/Menu/reset_password.gd" id="1_tv5mo"]
[ext_resource type="FontFile" uid="uid://bd6mel6xlq4ng" path="res://Fonts/Roboto-Regular-14.ttf" id="2_e4cah"]
[ext_resource type="Texture2D" uid="uid://bsnkqx35f1253" path="res://assets/BACK.png" id="2_lujn0"]
[ext_resource type="FontFile" uid="uid://bewpdc3jdwqrn" path="res://Fonts/LilitaOne-Regular.ttf" id="3_7gfbh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7gfbh"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ul0p"]
bg_color = Color(0.552941, 0.870588, 0.890196, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.00392157, 0.321569, 0.345098, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4b41f"]
bg_color = Color(0.552941, 0.870588, 0.890196, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.00392157, 0.321569, 0.345098, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c5rm3"]
bg_color = Color(0.0941176, 0.752941, 0.8, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.00392157, 0.321569, 0.345098, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60
shadow_size = 1
shadow_offset = Vector2(2, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nxyh"]
bg_color = Color(0.94902, 0.956863, 0.972549, 1)
border_width_bottom = 2
border_color = Color(0.384314, 0.129412, 0.00392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8dku7"]
bg_color = Color(0.94902, 0.956863, 0.972549, 1)
border_width_bottom = 2
border_color = Color(0.756863, 0.780392, 0.803922, 1)
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5v86"]
bg_color = Color(0.94902, 0.956863, 0.972549, 1)
border_width_bottom = 2
border_color = Color(0.384314, 0.129412, 0.00392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myyps"]
bg_color = Color(0.94902, 0.956863, 0.972549, 1)
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chtx7"]
bg_color = Color(0.94902, 0.956863, 0.972549, 1)
border_width_bottom = 2
border_color = Color(0.384314, 0.129412, 0.00392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xd686"]
bg_color = Color(0.94902, 0.956863, 0.972549, 1)
border_width_bottom = 2
border_color = Color(0.756863, 0.780392, 0.803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4cah"]
bg_color = Color(0.552941, 0.870588, 0.890196, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.00392157, 0.321569, 0.345098, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mjlx"]
bg_color = Color(0.552941, 0.870588, 0.890196, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.00392157, 0.321569, 0.345098, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwfqt"]
bg_color = Color(0.0941176, 0.752941, 0.8, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.00392157, 0.321569, 0.345098, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60
shadow_size = 1
shadow_offset = Vector2(2, 3)

[node name="ResetPassword" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tv5mo")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1330.0
offset_bottom = 800.0

[node name="Panel" type="Panel" parent="TextureRect"]
layout_mode = 0
offset_right = 1330.0
offset_bottom = 800.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7gfbh")

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect/Panel"]
layout_mode = 0
offset_left = 554.0
offset_top = 620.0
offset_right = 781.0
offset_bottom = 765.0

[node name="Label" type="Label" parent="TextureRect/Panel/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Modifier le mail d'envoi"

[node name="ChangeMail" type="Button" parent="TextureRect/Panel/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7gfbh")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_1ul0p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4b41f")
theme_override_styles/normal = SubResource("StyleBoxFlat_c5rm3")
text = "Modifier"

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/Panel"]
layout_mode = 0
offset_left = 456.0
offset_top = 322.0
offset_right = 888.0
offset_bottom = 526.0

[node name="NewPassword" type="LineEdit" parent="TextureRect/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/selection_color = Color(0.384314, 0.129412, 0.00392157, 1)
theme_override_colors/font_placeholder_color = Color(0.411765, 0.439216, 0.466667, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_e4cah")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_3nxyh")
theme_override_styles/normal = SubResource("StyleBoxFlat_8dku7")
placeholder_text = "Nouveau mot de passe"
secret = true

[node name="ConfirmNewPassword" type="LineEdit" parent="TextureRect/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/selection_color = Color(0.384314, 0.129412, 0.00392157, 1)
theme_override_colors/font_placeholder_color = Color(0.411765, 0.439216, 0.466667, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_e4cah")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_p5v86")
theme_override_styles/normal = SubResource("StyleBoxFlat_myyps")
placeholder_text = "Confirmer le nouveau mot de passe"
secret = true

[node name="CodeInput" type="LineEdit" parent="TextureRect/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/selection_color = Color(0.384314, 0.129412, 0.00392157, 1)
theme_override_colors/font_placeholder_color = Color(0.411765, 0.439216, 0.466667, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_e4cah")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_chtx7")
theme_override_styles/normal = SubResource("StyleBoxFlat_xd686")
placeholder_text = "Code"

[node name="ChangePasswordButton" type="Button" parent="TextureRect/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7gfbh")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_e4cah")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7mjlx")
theme_override_styles/normal = SubResource("StyleBoxFlat_gwfqt")
text = "RÉINITIALISER"

[node name="ResetNotif" type="Label" parent="TextureRect/Panel/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_right = 1330.0
offset_bottom = 117.0
color = Color(0.384314, 0.129412, 0.00784314, 1)

[node name="TextureButton" type="TextureButton" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 42.0
offset_top = 22.0
offset_right = 112.0
offset_bottom = 92.0
texture_normal = ExtResource("2_lujn0")

[node name="Label" type="Label" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 220.0
offset_top = 26.0
offset_right = 1114.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("3_7gfbh")
theme_override_font_sizes/font_size = 55
text = "RÉINITIALISATION DE MOT DE PASSE"

[connection signal="pressed" from="TextureRect/Panel/VBoxContainer2/ChangeMail" to="." method="_on_change_mail_pressed"]
[connection signal="pressed" from="TextureRect/Panel/VBoxContainer/ChangePasswordButton" to="." method="_on_change_password_button_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/TextureButton" to="." method="_on_texture_button_pressed"]
